Testsuite/ManualTests/820/820.c.gcov
        -:    0:Source:820.c
        -:    0:Graph:820.gcno
        -:    0:Data:820.gcda
        -:    0:Runs:1
        -:    1:/* PR sanitizer/65280 */
        -:    2:/* { dg-do run } */
        -:    3:/* { dg-options "-fsanitize=bounds" } */
        -:    4:/* Origin: Martin Uecker <uecker@eecs.berkeley.edu> */
        -:    5:
        1:    6:void foo(volatile int (*a)[3]) {
        1:    7:  (*a)[3] = 1; // error
        1:    8:  a[0][0] = 1; // ok
        1:    9:  a[1][0] = 1; // ok
        1:   10:  a[1][4] = 1; // error
        1:   11:}
        -:   12:
        1:   13:int main() {
        -:   14:  volatile int a[20];
        1:   15:  foo((int(*)[3]) & a);
        1:   16:  return 0;
        -:   17:}
        -:   18:
        -:   19:/* { dg-output "index 3 out of bounds for type 'int
        -:   20: * \\\[3\\\]'\[^\n\r]*(\n|\r\n|\r)" } */
        -:   21:/* { dg-output "\[^\n\r]*index 4 out of bounds for type 'int \\\[3\\\]'" } */
